--- a/style.css
+++ b/style.css
@@ -5,5 +5,10 @@ body {
 footer {
     background-color: black;
     color: white;
+    position: fixed;
     bottom: 0;
-}
+    width: 100%;
+
+    footer p{
+        text-align: center;
+    }
